Remove call to List.of()